--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Zach's Resume</title>
   <link rel="stylesheet" href="style.css">
@@ -7,7 +7,7 @@
 <body>
 <img src="https://media-exp1.licdn.com/dms/image/C4E03AQEnOyL4v5L0wQ/profile-displayphoto-shrink_400_400/0?e=1608768000&amp;v=beta&amp;t=hmZL83FZsyopDzgDNSFK_eS5D5Nf2BdQBhT4hibx9mM" alt="Edit photo" id="ember10902" class="profile-photo-edit__preview ember-view" width="200" height="200">
 <div> Zachary N. Mead 831-236-6136 <a href="mailto:zachary.n.mead@gmail.com">Email Me!</a> <a href="https://www.linkedin.com/in/znmead/">LinkedIn</a></div>
-  <p><h1>Profile</h1>Astute leader with a tenacious appetite for data-driven continuous improvement, operational excellence, and refined results. Fearless and proven people, process, and project manager experienced in directing high-functioning teams of 2 to 500. Resourceful entrepreneurial mindset focused on customer-centric creative solutions, market-led strategic decision-making, and anticipating future needs while conceptualizing innovative future states. Resilient action-oriented change agent very well-versed in building trust through promoting open and honest communication, fostering collaboration, and creating a positive and inviting culture based on integrity, service, and obsessive attention to detail.</p></div>
+<h1>Profile</h1>Astute leader with a tenacious appetite for data-driven continuous improvement, operational excellence, and refined results. Fearless and proven people, process, and project manager experienced in directing high-functioning teams of 2 to 500. Resourceful entrepreneurial mindset focused on customer-centric creative solutions, market-led strategic decision-making, and anticipating future needs while conceptualizing innovative future states. Resilient action-oriented change agent very well-versed in building trust through promoting open and honest communication, fostering collaboration, and creating a positive and inviting culture based on integrity, service, and obsessive attention to detail.</div>
 <div><h1>Experience</h1>
  <ul>
 <li>MISSION DIRECTOR, USAF; FT. MEADE, MD — 2016-2018
@@ -23,13 +23,13 @@
 </ul>
 </div> 
 <div><h1>Education</h1>
-<p><ul> <li>American Military University — BASc - Technical Management (PM w/Cert in EOD) - 2020</li>
+<ul> <li>American Military University — BASc - Technical Management (PM w/Cert in EOD) - 2020</li>
   <li>Community College of the Air Force — AAS - Intelligence Studies and Technology - 2017</li>
   <li>Defense Language Institute Foreign Language Center — AA - Hindi - 2012</li>
 <li>Defense Language Institute Foreign Language Center — AA - Hebrew - 2004</li>
 <li>Enlisted Aircrew Undergraduate Course — Certificate - 2003</p></div></li>
 <div><h1>Skills and Interests</h1>
-<p>Adaptability, AI, Biotech, Blockchain, Critical Analysis, Customer Service, EQ, Growth, Helping Others, Je ne sais quoi, Scalability, Servant Leadership, Strategic Planning</p></div>
+<p>Adaptability, AI, Biotech, Blockchain, Critical Analysis, Customer Service, EQ, Growth, Helping Others, Je ne sais quoi, Scalability, Servant Leadership, Strategic Planning</div>
 </body>
 </html>
 
